--- a/css/styles.css
+++ b/css/styles.css
@@ -121,8 +121,11 @@ max-width: 100vw;
     height: 20%;
     padding: 20px;
     margin-top: 6%;
-
+    animation: arriba 2s ease-in infinite;
+    background-color: #0d0d48;
+    border: 10px solid #fff;
 }
+
 .rigth{
     text-align: left;
     width: 100%;
@@ -196,14 +199,14 @@ ul{
     height: 100%;
     width: 0%;
     background-color: #d418c8;
-    animation: llenarBarra1 2s ease-in-out forwards;
+    animation: llenarBarra1 2s ease-in-out infinite;
     position: absolute;
 }
 .barra2{
     height: 100%;
     background-color: #d418c8;
     width: 0%;
-    animation: llenarBarra2 2s ease-in-out forwards;
+    animation: llenarBarra2 2s ease-in-out infinite;
     position: absolute;
 }
 
@@ -236,21 +239,24 @@ ul{
 #estudio{
     border-bottom: 4px solid #800080;
 }
-
 .panaderia{
     padding: 20px;
     font-size: 2.6vw;
     width: 100%;
+    background-color:#d4d3d3
 }
+
 
 .avion{
     gap: 20px;
     padding: 20px;
     font-size: 2.6vw;
+    background-color:#d4d3d3
 }
 .carrera{
     padding: 20px;
     font-size: 2.6vw;
+    background-color:#d4d3d3
 }
 .carrera img{
     max-width:100%;
@@ -269,6 +275,7 @@ details summary{
 }
 .img2{
     width: 26%;
+
 }
 .img3{
     width: 42%;
@@ -376,11 +383,16 @@ body{
     color: #800080;
     font-size: 101%;
 }
+summary:hover{
+    font-size: 110%;
+}
 .navegador p a[href]:hover{
     color:#800080;
     font-size: 3.1vw;
 }
-
+.img1:hover,.img2:hover,.img3:hover,.img4:hover,.img5:hover,.img6:hover{
+    transform: scale(1.2);
+}
 
 @media(max-width:800px){
     body{
